--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flask==2.3.0
-flask-cors==4.0.0
-numpy==1.24.0
-scikit-learn==1.3.0
+Flask==2.3.0
+Flask-Cors==4.0.0
+numpy==1.26.4
+scikit-learn==1.4.2
+setuptools>=68.2.2
+wheel
